[tool.poetry]
name = "langgrahp-multi-agent-1"
version = "0.1.0"
description = ""
authors = ["edo1z <endo.yuta@logicky.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.2.73"
python-dotenv = "^1.0.1"
langchain-openai = "^0.3.6"
langchain-community = "^0.3.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
